--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
         <div class="logo"><a href="index.html">ECOTECH</a></div>
         <nav>
             <a href="index.html">Home</a>
-            <a class="active" href="About.html">About</a>
-            <a href="Contact.html">Contact</a>
+            <a class="active" href="about.html">About</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
 
